Primeiro exercicio JavaScript

--- a/aula13/ex014/style.css
+++ b/aula13/ex014/style.css
@@ -16,6 +16,10 @@ header {
     text-align: center;
 }
 
+h1 {
+    padding: 20px;
+}
+
 section {
     background-color: white;
     border-radius: 10px;
@@ -25,8 +29,14 @@ section {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5)
 }
 
+div {
+    text-align: center;
+    padding: 8px;
+}
+
 footer {
     color: white;
+    padding: 20px;
     text-align: center;
     font-style: italic;
 }
