--- a/aula14/ex016/style.css
+++ b/aula14/ex016/style.css
@@ -1,32 +1,61 @@
 @charset "UTF-8";
 
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 body {
-    background-color: #353575;
-    border-color: #ffffff;
+    background: rgb(111, 111, 163);
 }
 
-header {
+header > h1 {
+    font-family: arial;
+    font-size: 3em;
     color: white;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.459);
     text-align: center;
 }
 
 section {
     background-color: white;
     border-radius: 10px;
-    padding: 15px;
     width: 500px;
+    height: 300px;
     margin: auto;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5)
+    box-shadow: 2px 5px 8px rgba(0, 0, 0, 0.473);
+}
+
+.contagem {
+    font-family: arial;
+    padding: 20px;
+}
+
+section > div > p > input {
+    width: 150px;
+}
+
+section > div > p > input:hover {
+    border-color: #afaffc;
+}
+
+.botao {
+    padding-left: 20px;
+    margin-top: -15px;
+}
+
+.botao > input {
+    width: 100px;
+    height: 25px;
+}
+
+.botao > input:hover {
+    background-color: #afaffc;
+    color: white;
+    transition: 0.3s;
+    font-weight: bolder;
+    width: 110px;
 }
 
 footer {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
     color: white;
     text-align: center;
-    font-style: italic;
 }
